Add some common dotfiles to exclude.conf
Both of these typically don't have world read permission:
* .ansible/tmp - Ansible tmp dir
* .rnd         - Random seed file

--- a/etc/conf.d/exclude.conf
+++ b/etc/conf.d/exclude.conf
@@ -3,6 +3,7 @@
 # relative paths
 .AbiSuite
 .adobe
+.ansible/tmp
 .bash_history
 .config
 .dbus
@@ -37,6 +38,7 @@
 .pulse-cookie
 .purple
 .remmina
+.rnd
 .Skype
 .ssh
 .subversion/auth
