--- a/bin/blargup.in
+++ b/bin/blargup.in
@@ -6,23 +6,25 @@ profile="$1"
 confdir="@CONFDIR@"
 
 die() {
-	printf "$1\n"
+	local message="$1"
+	shift
+	printf "$message\n" "$@" >&2
 	exit 1
 }
 
 if [[ "$profile" == "" ]]; then
-	die "Syntax: $prog <profile>"
+	die "Syntax: %s <profile>" "$prog"
 fi
 
 file="$confdir/$profile"
 if [[ -r "$file" ]]; then
 	. "$file"
 else
-	die "Profile $profile does not exist"
+	die "Profile %s does not exist" "$profile"
 fi
 
 if [[ "${#systems}" == 0 ]]; then
-	die "Undefined \$systems in $file"
+	die "Undefined \$systems in %s" "$file"
 fi
 
 retval=0
@@ -30,7 +32,7 @@ for system in "${systems[@]}"; do
 	if [[ -r "$confdir/systems.d/$system.sh" ]]; then
 		. "$confdir/systems.d/$system.sh"
 	else
-		die "System $system does not exist"
+		die "System %s does not exist" "$system"
 	fi
 done
 
